--- a/rules/salesforce_brute_force_attack_on_user.yml
+++ b/rules/salesforce_brute_force_attack_on_user.yml
@@ -5,7 +5,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:salesforce
+  %ingest.source_type:"salesforce:events"
   event_type:Login
   login_status:LOGIN_ERROR_INVALID_PASSWORD
   | groupbycount(user_name)
