Revert "Update source_type"
This reverts commit c754238be728e9b2fed3ddd10aaf80031ccabf5c.

--- a/rules/salesforce_admin_login_as_user.yml
+++ b/rules/salesforce_admin_login_as_user.yml
@@ -7,7 +7,7 @@ description: |-
 enabled: true
 severity: Informational
 query_text: |-
-  %ingest.source_type:"salesforce:events"
+  %ingest.source_type:salesforce
   event_type:LoginAs
   | groupbycount(delegated_user_name)
   | where @q.count > 0
