--- a/rules/salesforce_login_from_disabled_account.yml
+++ b/rules/salesforce_login_from_disabled_account.yml
@@ -7,7 +7,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:"salesforce:events"
+  %ingest.source_type:salesforce
   event_type:Login
   login_status:LOGIN_ERROR_USER_INACTIVE
   | groupbycount(user_name)
