Use `@scnr.source_type` instead of `%ingest.source_type`

--- a/rules/salesforce_password_spray_attack.yml
+++ b/rules/salesforce_password_spray_attack.yml
@@ -6,7 +6,7 @@ description: |-
 enabled: true
 severity: Medium
 query_text: |-
-  %ingest.source_type:salesforce
+  @scnr.source_type:salesforce
   event_type:Login
   login_status:(LOGIN_ERROR_INVALID_PASSWORD LOGIN_ERROR_SSO_PWD_INVALID)
   | stats countdistinct(user_name) as n_users by client_ip
